
2019-10-01  Kevin L. Esteb <kevin@kesteb.us>
    * src/log4c/appender_type_staticfile.[c|h] 
    Added a static file appender.

    * src/log4c/appender_type_basic_r.[c|h]
    * src/log4c/appender_type_dated_r.[c|h]
    * src/log4c/appender_type_dated_local_r.[c|h]
    Removed them. Them seemed redundant. 

    * src/log4c/appender_type_basic.[c|h]
    * src/log4c/appender_type_dated.[c|h]
    * src/log4c/appender_type_dated_local.[c|h]
    Updated them to have the same behavior as the above appenders.

    * src/log4c/rc.c
    * src/log4c/init.c
    Extended the config file handling for the new static file appender.

    * src/log4c/Makefile.am
    Updated to reflect the above changes.

    * configure.in
    Bumped the version number.

    * ChangeLog: log4c-1.3.0

2013-10-03  František Dvořák  <valtri@civ.zcu.cz>

	* src/sd/test.c, tests/log4c/bench.c, tests/log4c/bench_fwrite.c:
	Proper formating of long long integers in MSVC and MinGW ports.

	* release: Release covering also MinGW binaries with tests. Script
	small improvements.

	* configure.in, release, src/log4c/Makefile.am: Generate .def file in
	MinGW platform, launch MSVC linker during release if available.

	* ChangeLog, NEWS, configure.in: log4c-1.2.4

2013-09-30  František Dvořák  <valtri@civ.zcu.cz>

	* src/sd/domnode-xml.c: Build with disabled expat and available
	nl_langinfo.

	* src/log4c/config-win32.h, src/log4c/layout_type_basic_r.c,
	src/sd/sd_xplatform.c, src/sd/sd_xplatform.h:
	Replacement function for buggy snprintf()/vsnrpintf on MinGW. Also
	removed sd_xplatform.h header from the sd_xplatform.c as we need the
	original vsnprintf() function.

	* src/sd/test.c, tests/log4c/Makefile.am:
	Launching tests under MinGW (and keep FreeBSD working).

2013-09-29  František Dvořák  <valtri@civ.zcu.cz>

	* README, configure.in, examples/application_1.c,
	examples/application_2.c, examples/application_3.c,
	src/log4c/Makefile.am, src/log4c/category.c, src/sd/sd_xplatform.h:
	MinGW port improvements: