@@ -60,5 +60,6 @@ const log4c_appender_type_t log4c_appender_type_stream = {
     stream_open,
     stream_append,
     stream_close,
+    NULL
 };
 
