@@ -203,5 +203,6 @@ const log4c_appender_type_t log4c_appender_type_stream2 = {
     stream2_open,
     stream2_append,
     stream2_close,
+    NULL
 };
 
